<resources>
    <string name="app_name">Boletim</string>
    <string name="disciplinas">Disciplinas</string>
    <string name="agendamentos">Agendamentos</string>
    <string name="seus_dados">Seus dados</string>
    <string name="sair">Sair</string>
    <string name="salvar">Salvar</string>
    <string name="disciplina_extra">Disciplina Extra</string>
    <string name="professor">Professor(a)</string>
    <string name="nome">Nome</string>
    <string name="nota">Nota Bimestral</string>
    <string name="adicionar_notas">Adicionar Nota</string>
    <string name="adicionar_prova_final">Adicionar Prova Final</string>
    <string name="editar">Editar</string>
    <string name="remover">Remover</string>
    <string name="adicionar_anotacao">Adicionar Anotação</string>
    <string name="media_pessoal">Média Pessoal</string>
    <string name="media_institucional">Média da Instituição</string>
    <string name="qtd_provas">Quantidade de Bimestres</string>
    <string name="instituicao">Instituição</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="prova_bimestral">Prova Bimestral</string>
    <string name="recuperacao">Recuperação</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="entrar">Entrar</string>
    <string name="nome2">Nome: </string>
    <string name="email2">Email: </string>
    <string name="instituicao2">Instituição: </string>
    <string name="media_da_instituicao2">Média da Instituição: </string>
    <string name="media_pessoal2">Média Pessoal: </string>
    <string name="qtd_provas2">Quantidade de Provas: </string>
    <string name="nota2">Nota:</string>
    <string name="recuperacao2">Recuperação: </string>
    <string name="agendar_uma_prova">Agendar uma Prova</string>
    <string name="titulo">Título</string>
    <string name="hora">Hora</string>
    <string name="hora2">Hora: </string>
    <string name="data2">Data: </string>
    <string name="login">Login</string>
    <string name="professor2">Professor(a): </string>
    <string name="adicionar_disciplina">Adicionar Disciplina</string>
    <string name="adicionar_nota_final">Adicionar Nota Final</string>
    <string name="agendar_prova">Agendar Prova</string>
    <string name="cadastrar_aluno">Cadastrar Aluno</string>
    <string name="notas">Notas</string>
    <string name="nota_da_prova_final">Nota da Prova Final</string>
    <string name="sua_media_para_essa_disciplina">Sua média para essa disciplina:</string>
    <string name="cancelar">Cancelar</string>
    <string name="remover_todos">Remover Todos</string>
    <string name="remover_todos_os_dados">Remover Todos os Dados</string>
    <string name="media_minima">Média Mínima</string>
    <string name="quantidade_provas">Quantidade de Provas: </string>
</resources>
