<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    android:layout_margin="10dp"
    tools:context="com.app.boletim.activities.CadastroNotasActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_nota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nota"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancelar_nota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="#fff"
            android:layout_marginStart="50dp"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/btn_salvar_nota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="#fff"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:text="@string/salvar" />

    </LinearLayout>

</LinearLayout>
